--- a/cheese/index.html
+++ b/cheese/index.html
@@ -231,11 +231,30 @@
 			<iframe class="mapStore" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1997.5231491926131!2d30.35159095499093!3d59.95664516306671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696317a4bfa367d%3A0x832d86e91c43fe79!2z0KLRgNCw0L3RgS3QmtC-0LzQv9C-0L3QtdC90YI!5e0!3m2!1sru!2sru!4v1584298575400!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		</div>
 	</div>
+	
+	<form>
+
+		<!-- Hidden Required Fields -->
+		<input type="hidden" name="project_name" value="Cheese">
+		<input type="hidden" name="admin_email" value="ketrin-yx1512@yandex.ru">
+		<input type="hidden" name="form_subject" value="Form">
+		<!-- END Hidden Required Fields -->
+
+		<input type="text" name="Name" placeholder="You name..." required><br>
+		<input type="text" name="E-mail" placeholder="You E-mail..." required><br>
+		<input type="text" name="Phone" placeholder="You phone..."><br>
+		<button>Send</button>
+
+	</form>
+	
+	
 
 
 
 
 
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="script/script.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript">
 /*TweenMax.from(".text-inform h1", 1, {
